--- a/templates/_index-content.svelte.html
+++ b/templates/_index-content.svelte.html
@@ -3,14 +3,14 @@
   <div class="hero">
     <h1>Nonprofit 100</h1>
 
-    <p class="lead container-sm">Healthcare leads as we look at the top 100 nonprofits of 2017.</p>
+    <p class="lead container-sm">A new title for 2018 list.</p>
 
     <div class="byline">
       <address>By <a rel="author" href="http://startribune.com//patrick-kennedy/10645186/">Patrick Kennedy</a></address>
       <span class="spacer"></span>
       Star Tribune
       <span class="spacer-alt"></span>
-      <time pubdate datetime="2017-07-30T16:00:00">July 30, 2017 &mdash; 4:00pm</time>
+      <time pubdate datetime="2018-12-30T00:00:00">December 12, 2018</time>
     </div>
 
     <div class="share-placeholder">
@@ -85,10 +85,7 @@
         // Sort
         if (ceoSort) {
           copy = sortBy(copy, c => {
-            let ceo = find(
-              c.officers,
-              o => o.title && o.title.match(ceoTitleMatch)
-            );
+            let ceo = find(c.officers, ceoTitleMatch);
             if (ceo) {
               let sal = find(ceo.nonprofit_salaries, {
                 publishyear: publishYear
@@ -122,7 +119,13 @@
     data() {
       return {
         filter: undefined,
-        ceoTitleMatch: /(ceo|president)/i,
+        ceoTitleMatch: officer => {
+          return (
+            officer.ceo ||
+            (officer.title &&
+              officer.title.match(/(ceo|president|chief\s+execut)/i))
+          );
+        },
         categories: [
           { id: undefined, name: "All" },
           { id: "social-services", name: "Social services" },
