--- a/templates/_index-content.svelte.html
+++ b/templates/_index-content.svelte.html
@@ -53,6 +53,19 @@
         />
       {/each}
     </div>
+
+    <footer class="article-footer">
+      <h1>Credits</h1>
+
+      <ul class="credits">
+        <li>Data collected by Patrick Kennedy</li>
+        <li>Design and development by Alan Palazzolo, Jamie Hutt, and Billy Steve Clayton</li>
+      </ul>
+
+      <h1>Methodology</h1>
+
+      <p>Certain nonprofits, charities and charitable trusts registered with the state must file IRS Form 990 with the Minnesota attorney general's office each year. Most of the financial information for organizations on our list was taken from their 2016 Form 990s or from consolidated audited financial statements. The Star Tribune's list includes the top officer and that person's total compensation, including salary, bonus and incentive compensation, other reportable compensation, contributions to retirement and other deferred compensation plans, and the value of nontaxable benefits.</p>
+    </footer>
   </div>
 </div>
 
