adding in company id.

--- a/templates/_company.svelte.html
+++ b/templates/_company.svelte.html
@@ -1,4 +1,4 @@
-<div class="company">
+<div class="company" data-id="{ coid }">
   <div class="company-heading row">
     <div class="col col-25 col-md-20 grid-space">
       <p class="rank category { kebabCase(category) }">
