--- a/templates/_index-content.svelte.html
+++ b/templates/_index-content.svelte.html
@@ -1,9 +1,9 @@
 
 <div class="strib-styles ssa ssb ssc">
   <div class="hero">
-    <h1>The Non-Profit 100</h1>
+    <h1>The Nonprofit 100</h1>
 
-    <p class="lead container-sm">The 23rd annual Star Tribune top non-profits in Minnesota.</p>
+    <p class="lead container-sm">The 23rd annual Star Tribune list of largest nonprofits in Minnesota.</p>
 
     <div class="byline">
       <address>By <a rel="author" href="http://startribune.com//patrick-kennedy/10645186/">Patrick Kennedy</a></address>
@@ -16,6 +16,10 @@
     <div class="share-placeholder">
       <!-- share -->
     </div>
+  </div>
+
+  <div class="container-md">
+    <p class="summary">The Star Tribune's 23rd annual look at Minnesota's nonprofit businesses shows again the sector's economic force. Some of these organizations are big competitors in their fields, with CEOs making high six-figure or seven-figure salaries. Revenue for the 100 largest nonprofits rose 10.5 percent last year to $58.1 billion, with health care and educational organizations making up nearly three-quarters of the list. They also employ 313,407 people, a slight decrease from last year. Long term, the nonprofit sector has grown from 8 percent in 1993 to 12 percent of the state's workforce in 2017, according to the Minnesota Council of Nonprofits.</p>
   </div>
 
   <div class="container-lg">
@@ -80,6 +84,12 @@
       Company
     },
 
+    oncreate() {
+      if (this.get().attachShare) {
+        this.get().attachShare();
+      }
+    },
+
     computed: {
       filteredNonProfits({
         nonprofits,
@@ -131,7 +141,7 @@
         categories: [
           { id: undefined, name: "All" },
           { id: "social-services", name: "Social services" },
-          { id: "healthcare", name: "Healthcare" },
+          { id: "healthcare", name: "Health care" },
           { id: "arts", name: "Arts" },
           { id: "education", name: "Education" },
           { id: "other", name: "Other" }
